deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: explorecalifornia.com
  name: explorecalifornia-website
spec:
  replicas: 1
  selector:
    matchLabels:
      app: explorecalifornia.com
  strategy: {}
  template:
    metadata:
      labels:
        app: explorecalifornia.com
    spec:
      containers:
      - image: localhost/explorecalifornia.com
        imagePullPolicy: IfNotPresent
        name: website
