service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: explorecalifornia-website
  name: explorecalifornia-service
spec:
  ports:
  - name: 80-80
    port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: explorecalifornia-website
  type: ClusterIP
